# ada-detection-challenge

./: .env.example  Dockerfile  README.md  challenge_manager.py  compose.yml  controller.py  pyproject.toml
.github/workflows/: 3.build-publish-docker.yml
docs/: Testing_manuals.md  zfb-intergrity.md
scripts/docker/: docker-entrypoint.sh
src/api/configs/: api.yml  challenge.yml
src/api/core/configs/: _challenge.py
src/api/core/constants/: _base.py
src/api/endpoints/challenge/: _nst_manager.py  _payload_manager.py  schemas.py  service.py  utils.py
src/templates/: asset-manifest.json  index.html
src/templates/static/css/: main.674227f9.css
src/templates/static/detections/: automation.js
src/templates/static/js/: main.4115dddc.js  main.ab91f5f5.js
templates/compose/: compose.override.dev.yml  compose.override.prod.yml
